--- a/src/pages/sign-in/ui/signInPage.module.css
+++ b/src/pages/sign-in/ui/signInPage.module.css
@@ -1,17 +1,17 @@
 .page {
   min-height: 100vh;
-  background-color: var(--color-dark-900);
+  background-color: var(--color-dark-700);
 }
 
 .main {
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 36px 16px 48px;
+  padding: 35px 16px 48px;
 }
 
 @media (min-width: 768px) {
   .main {
-    padding-top: 36px;
+    padding-top: 35px;
   }
 }
